--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
 		<script src="src/main.js" defer></script>
 	</head>
 	<body>
+		<header>
+			<p>BURN-OUTE SIDA GAME</p>
+		</header>
 		<div id="corps">
-			<p>Hello world!</p>
+			<div id="intro">
+				<p>Bienvenue...</p>
+			</div>
+			<div id="map">
+				<p>Carte du jeu</p>
+				<div id="pop-up">
+					<p>Combat !</p>
+				</div>
+				<p>...</p>
+			</div>
+			<div id="stats">
+				<p>Vous avez 10 PV</p>
+			</div>
 		</div>
+		<footer>
+			<p>Site créé dans le cadre de la Nuit de l'Info 2022 par :</p>
+			<p>Delanclos Antoine</p>
+			<p>El Idrissi Sami</p>
+			<p>El Idrissi Mehdi</p>
+			<p>Varesano Quentin</p>
+			<p>Vinet Dylan</p>
+			<p>Equipe de Polytech Tours</p>
+		</footer>
 	</body>
 </html>
