--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 		<title>Budget personnel</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css"/>
-		<script src="src/main.js" defer></script>
+		<script src="main.js" defer></script>
 	</head>
 	<body>
 		<header>
+			<button id="cookies">🍪</button>
 			<p>BURN-OUTE SIDA GAME</p>
 		</header>
 		<div id="corps">
@@ -34,5 +35,15 @@
 			<p>Vinet Dylan</p>
 			<p>Equipe de Polytech Tours</p>
 		</footer>
+		<div id="cookies-modal" class="modal">
+			<div class="modal-content">
+				<span id="close">&times;</span>
+				<div id="texte-cookies">
+				</div>
+				<button id="accepter">Accepter</button>
+				<button id="refuser">Refuser</button>
+				<button id="plus">Voir plus</button>
+			</div>
+		</div>
 	</body>
 </html>
