--- a/Burn-oute-main/jeu.html
+++ b/Burn-oute-main/jeu.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Jeu du sexe</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+		<link rel="stylesheet" href="style.css"/>
+		<script src="src/main.js" defer></script>
         <title>Document</title>
     </head>
     <body>
@@ -22,9 +22,7 @@
 			<div id="pop-up">
 				<p>Combat !</p>
 				<img id="Logo_IST" src="assets/Pokeball.png" alt="Logo des pokemons">
-				<video id="Transition">
-                    <source src="assets/Trans_combat.mov">
-                </video>
+				<img id="Transition" src="assets/Trans_combat.gif">
 				<button class="Button_Interact_Menu" id="But_Attaque" type="button">Attaque</button>
 				<button class="Button_Interact_Menu" id="But_Objet" type="button">Objets</button>
 				<button class="Button_Interact_Menu" id="But_IST" type="button">IST</button>
@@ -37,7 +35,14 @@
 				<button class="Button_Interact_Menu" id="But_Objet_2" type="button">OBJ_2</button>
 				<button class="Button_Interact_Menu" id="But_Objet_3" type="button">OBJ_3</button>
 				<button class="Button_Interact_Menu" id="But_Objet_4" type="button">OBJ_4</button>
-				
+                <button class="Button_Interact_Menu" id="But_IST_1" type="button">IST_1</button>
+                <button class="Button_Interact_Menu" id="But_IST_2" type="button">IST_2</button>
+                <button class="Button_Interact_Menu" id="But_IST_3" type="button">IST_3</button>
+                <button class="Button_Interact_Menu" id="But_IST_4" type="button">IST_4</button>
+                <button class="Button_Interact_Menu" id="But_En_Apprendre_Plus" type="button">En apprendre plus</button>
+				<button class="Button_Interact_Menu" id="But_Rassurer" type="button">Rassurer</button>
+				<button class="Button_Interact_Menu" id="But_Infos" type="button">Informations générales</button>
+				<button class="Button_Interact_Menu" id="But_Autres" type="button">Autres</button>
 			</div>
 			<div id="stats">
 				<p>Vous êtes actuellement LVL.34</p>
