--- a/Burn-oute-main/index.html
+++ b/Burn-oute-main/index.html
@@ -17,7 +17,7 @@
 		</div>
 		<footer>
 			<p>Site créé dans le cadre de la Nuit de l'Info 2022 par :</p>
-			<p>Delanclos Antoine</p>
+			<p>Delenclos Antoine</p>
 			<p>El Idrissi Sami</p>
 			<p>El Idrissi Mehdi</p>
 			<p>Varesano Quentin</p>
