--- a/Burn-oute-main/index.html
+++ b/Burn-oute-main/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Budget personnel</title>
+		<title>Burn-oute SIDA game</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css"/>
-		<script src="src/main.js" defer></script>
+		<script src="man.js" defer></script>
 	</head>
 	<body>
 		<header>
+			<button id="cookies">🍪</button>
 			<p>BURN-OUTE SIDA GAME</p>
 		</header>
-		<div>
+		<div id="corps">
 			<a href="jeu.html">
 				<button id="Button_Page_Principal" type="button">Jouer</button>
 			</a>
@@ -24,5 +25,15 @@
 			<p>Vinet Dylan</p>
 			<p>Equipe de Polytech Tours</p>
 		</footer>
+		<div id="cookies-modal" class="modal">
+			<div class="modal-content">
+				<span id="close">&times;</span>
+				<div id="texte-cookies">
+				</div>
+				<button id="accepter">Accepter</button>
+				<button id="refuser">Refuser</button>
+				<button id="plus">Voir plus</button>
+			</div>
+		</div>
 	</body>
 </html>
