--- a/Burn-oute-main/jeu.html
+++ b/Burn-oute-main/jeu.html
@@ -9,12 +9,22 @@
     </head>
     <body>
         <div id="corps">
-            <a href="index.html">
-				<button id="Button_Page_Principal" type="button">Page d'accueil</button>
+            <a href="index.html" target="_self">
+				<button id="Button_Page_Principal" type="button" target="self">Page d'accueil</button>
 			</a>
+
 			<div id="intro">
 				<p>Bienvenue...</p>
 			</div>
+			
+			<div>
+				<p>Sélectionnez votre personnage</p>
+				<button class="Button_Select_Perso" id="Select_XX" src=""></button>
+				<img id="IMG_XX" src="assets/XX.png">
+				<button class="Button_Select_Perso" id="Select_XY" src=""></button>
+				<img id="IMG_XY" src="assets/XY.png">
+			</div>
+
 			<div id="map">
 				<p>Carte du jeu</p>
 				<p>...</p>
