--- a/Burn-oute-main/index.html
+++ b/Burn-oute-main/index.html
@@ -11,17 +11,35 @@
 			<p>BURN-OUTE SIDA GAME</p>
 		</header>
 		<div>
+		<p class="Titre_partie" id="Pres">Présentation</p> <!--A enlever par la suite-->
+		<p class="Paragraphe" id="Pres_para">A l'occasion de cette Nuit de l'Info 2022 et de la 34ème journée mondiale de lutte contre le SIDA.</p>
+		<p class="Paragraphe" id="Pres_para">Ce site est un jeu ludique sensibilisant sur les IST, les relations sexuelles et la contraception.</p>
+		<p class="Paragraphe" id="Pres_para">Le but est d'éduquer les jeunes adultes et d'éliminer certains préjugés qui sont dépassés en 2022.</p>
+		<p class="Titre_partie" id="Regles">Règles</p>
+		<p class="Paragraphe" id="Regles_para">Ce jeu est un jeu d'aventure sur une carte interactive avec un système de combat en tour par tour.</p>
+		<p class="Paragraphe" id="Regles_para">Le but est d'avancer jusqu'à la ville de Terminus en aidant le maximum de personnes en route, pour enfin y combattre le VIH.</p>
+		<p class="Paragraphe" id="Regles_para">Pour ce faire il faudra bien choisir son trajet et gagner ses différents combats</p>
+		</div>
+
+		<div>
 			<a href="jeu.html" target="self">
-				<button id="Button_Page_Principal" type="button" target="self">Jouer</button>
+			<img id="Select_Screen" src="assets/jouer.gif">
 			</a>
-			<button id="Button_Contact" type="button">Contact</button>
 		</div>
 		<footer>
 			<p>Site créé dans le cadre de la Nuit de l'Info 2022 par :</p>
-			<p>Delenclos Antoine</p>
-			<p>El Idrissi Sami</p>
-			<p>El Idrissi Mehdi</p>
-			<p>Varesano Quentin</p>
+			<a class="Lien_mail" href="antoine.delenclos37@gmail.com">
+				<p>Delenclos Antoine</p>
+			</a>
+			<a class="Lien_mail" href="elidrissi.sami89@gmail.com">
+				<p>El Idrissi Sami</p>
+			</a>
+			<a class="Lien_mail" href="mehdi.elidrissi89@gmail.com">
+				<p>El Idrissi Mehdi</p>
+			</a>
+			<a class="Lien_mail" href="quentin.varesano@gmail.com">
+				<p>Varesano Quentin</p>
+			</a>
 			<p>Vinet Dylan</p>
 			<p>Equipe de Polytech Tours</p>
 		</footer>
